--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header id="showcase" class="grid">
   <div class="bg-image"></div>
   <div class="content-wrap">
-    <h1>Welcome to James Steffes Web Solutions</h1>
+    <h1>Welcome to James P. Steffes Web Solutions</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci eum error earum soluta voluptatum nisi laboriosam eos saepe asperiores dolorum.</p>
     <a href="#section-b" class="btn">Read More</a>
   </div>
