--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <h1>My new news</h1>
+    <h1>My new news 11:28</h1>
     <select id="sources"></select>
   </header>
   <main></main>
