worked on source array BAD

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <a href="travel/index.html">Travel</a>
-    <h1>My new news 11:28</h1>
+    <h1>My new news 12/20</h1>
     <select id="sources"></select>
   </header>
   <main></main>
