--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+    <div class="mh">
+      <input type="radio" checked="checked" name="edit" value="A">A
+    <input type="radio" name="edit" value="B">B
+    <input type="radio" name="edit" value="C">C</div>
   <header>
     <a href="travel/index.html">Travel</a>
     <h1>My new news 12/20</h1>
