--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 </head>
 
 <body>
-      <a href="travel/index.html">Travel</a>
-    <a href="textComp/index.html">Text Comp</a>
-    <div class="mh">
-      <input type="radio" checked="checked" name="edit" value="A">A
+  <a href="travel/index.html">Travel</a>
+  <a href="textComp/index.html">Text Comp</a>
+  <a href="hand/index.html">Handbook</a>
+  <div class="mh">
+    <input type="radio" checked="checked" name="edit" value="A">A
     <input type="radio" name="edit" value="B">B
     <input type="radio" name="edit" value="C">C</div>
   <header>
