news site kind of works

--- a/index.html
+++ b/index.html
@@ -10,21 +10,34 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#ffffff" />
 </head>
+<header>
+  <ul>
+    <li>
+      <a href="travel/index.html">Travel</a>
+      <a href="textComp/index.html">Text Comp</a>
+      <a href="hand/index.html">Hand</a>
+    </li>
+  </ul>
+</header>
 
 <body>
-  <a href="travel/index.html">Travel</a>
-  <a href="textComp/index.html">Text Comp</a>
-  <a href="hand/index.html">Handbook</a>
   <div class="mh">
-    <input type="radio" checked="checked" name="edit" value="A">A
-    <input type="radio" name="edit" value="B">B
-    <input type="radio" name="edit" value="C">C</div>
-  <header>
-    <h1>My new news 12/20</h1>
-    <select id="sources"></select>
-  </header>
-  <main></main>
-  <script src="app.js"></script>
+    <header>
+      <style>
+        #buts {
+          color: #ff0000;
+          display: flex;
+        }
+      </style>
+      <ul id="buts"></ul>
+      <button class="btn">NY Times</button>
+      <button class="btn">NY Times</button>
+      <button class="btn">NY Times</button>
+      <button class="btn">NY Times</button>
+      <button class="btn">NY Times</button>
+    </header>
+    <main></main>
+    <script src="app.js"></script>
 </body>
 
 </html>
