--- a/hand/index.html
+++ b/hand/index.html
@@ -1,53 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-    />
-    <title>HandBook</title>
-  </head>
 
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <title>HandBook</title>
+</head>
+
+<body>
     <nav>
-      <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">HandBook</a>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
-          ><i class="material-icons">menu</i></a
-        >
-      </div>
+        <div class="nav-wrapper">
+            <a href="#!" class="brand-logo">HandBook</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        </div>
     </nav>
 
     <ul class="sidenav" id="mobile-demo">
-      <li>
-        <a class="waves-effect waves-light btn-small" id="clothes">Clothes</a>
-      </li>
-      <li><a class="waves-effect waves-light btn-small" id="food">Food</a></li>
+        <li><a class="waves-effect waves-light btn-small" id="clothes">Clothes</a></li>
+        <li><a class="waves-effect waves-light btn-small" id="food">Food</a></li>
     </ul>
 
-    <div class="container"><div id="test"></div></div>
-  </body>
-  <script>
+    <div class="container">
+        <input onkeyup="filChar()" id="search" type="text" placeholder="Search  ">
+        <div id="cards"></div>
+    </div>
+</body>
+<script>
     function stp(snip) {
-      let regex = /Phone:?\s+|hours:?\s+|remarks:?"\s|"+/gi
-      return snip.replace(regex, "")
+        let regex = /Phone:?\s+|hours:?\s+|remarks:?"\s|"+/gi
+        return (snip.replace(regex, ''))
     }
 
-    function f(k, t) {
-      test = document.getElementById("test")
-      k = k.filter(q => q[8] === t)
-      console.log(k)
-      str = k
-        .map(
-          f =>
-            `<div class="row">
+    function filChar(char) {
+        cards = document.getElementById('cards')
+        sear = document.getElementById('search').value.toUpperCase()
+        places = allPlaces.filter(x => x[0].toUpperCase().match(sear))
+        str = places.map(f =>
+                `<div class="row">
             <div class="col s12 m6">
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
@@ -60,39 +52,65 @@
                 </div>
             </div>
         </div>`
-        )
 
-        .join("")
-      // console.log(str)
-      test.innerHTML = str
+            )
+
+            .join("")
+        // console.log(str)
+        cards.innerHTML = str
+
     }
-    // const url = 'https://gist.githubusercontent.com/wither7007/bc5129e8c3adcf5a7668c516ca61dd46/raw/b2bdce64d7b6da2a12c91b9493e7cbb612a7b11c/json'
+
+    function filType(places, type) {
+        cards = document.getElementById('cards')
+        places = places.filter(q => q[8] === type)
+        console.log(places)
+        str = places.map(f =>
+                `<div class="row">
+            <div class="col s12 m6">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">${f[0]}</span>
+                        Address: ${f[1]} <br>
+                        Phone: ${stp(f[2])} <br>
+                        Hours: ${stp(f[3])} <br>
+                        Remarks: ${stp(f[4])} <br>
+                    </div>
+                </div>
+            </div>
+        </div>`
+
+            )
+
+            .join("")
+        // console.log(str)
+        cards.innerHTML = str
+    }
     // url = 'dum.txt'
     url =
-      "https://gist.githubusercontent.com/wither7007/0ec337177af163db09ba18164c8be45c/raw/698360d35f853b5b29deef546a5a134ef71a03fc/hand"
-    let n = []
+        "https://gist.githubusercontent.com/wither7007/0ec337177af163db09ba18164c8be45c/raw/698360d35f853b5b29deef546a5a134ef71a03fc/hand"
+    let allPlaces = []
     fetch(url)
-      .then(resp => resp.json())
-      .then(function(data) {
-        console.log("data is", data)
-        n = n.concat(data)
-      })
-    document
-      .getElementById("clothes")
-      .addEventListener("click", () => f(n, "c"))
-    document.getElementById("food").addEventListener("click", () => f(n, "f"))
-  </script>
-  <script>
+        .then((resp) => resp.json())
+        .then(function (data) {
+            console.log('data is', data)
+            allPlaces = allPlaces.concat(data)
+        })
+    document.getElementById('clothes').addEventListener('click', () => filType(allPlaces, 'c'))
+    document.getElementById('food').addEventListener('click', () => filType(allPlaces, 'f'))
+</script>
+<script>
     let options = ""
-    document.addEventListener("DOMContentLoaded", function() {
-      var elems = document.querySelectorAll(".sidenav")
-      var instances = M.Sidenav.init(elems, options)
-    })
-    document.addEventListener("DOMContentLoaded", function() {
-      var elems = document.querySelectorAll(".sidenav")
-      var instances = M.Sidenav.init(elems, options)
-    })
-  </script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var elems = document.querySelectorAll('.sidenav');
+        var instances = M.Sidenav.init(elems, options);
+    });
+    document.addEventListener('DOMContentLoaded', function () {
+        var elems = document.querySelectorAll('.sidenav');
+        var instances = M.Sidenav.init(elems, options);
+    });
+</script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </html>
