--- a/hand/index.html
+++ b/hand/index.html
@@ -7,110 +7,80 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>HandBook</title>
 </head>
 
 <body>
-    <nav>
-        <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">HandBook</a>
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        </div>
-    </nav>
 
-    <ul class="sidenav" id="mobile-demo">
-        <li><a class="waves-effect waves-light btn-small" id="clothes">Clothes</a></li>
-        <li><a class="waves-effect waves-light btn-small" id="food">Food</a></li>
-    </ul>
+    <div class="smenu">
 
-    <div class="container">
-        <input onkeyup="filChar()" id="search" type="text" placeholder="Search  ">
-        <div id="cards"></div>
+        <ul id="slide-out" class="sidenav mobile">
+
+            <li><a id="clothes" class="waves-effect" href="#!">Clothes</a></li>
+            <li><a id="food" class="waves-effect" href="#!">Food</a></li>
+        </ul>
+        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
+    <div class="containers">
+        <div class="wrapper">
+            <ul class="collapsible">
+                <li>
+                    <div class="collapsible-header">
+                        <i class="material-icons">filter_drama</i>Essentials</div>
+                    <div class="collapsible-body">
+
+
+                        <ul class="collapsible">
+                            <li>
+                                <div class="collapsible-header"><i class="material-icons">filter_drama</i>Food</div>
+                                <div class="collapsible-body"><span id="clothes">Clothes</span></div>
+                                <div class="collapsible-body"><span id="food">Food</span></div>
+                            </li>
+                            <li>
+                                <div class="collapsible-header"><i class="material-icons" id="clothes">filter_drama</i>Clothes</div>
+                                <!-- <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+                            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div> -->
+                            </li>
+                            <li>
+                                <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+                                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+                    <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                </li>
+                <li>
+                    <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+                    <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                </li>
+            </ul>
+            <div id='first' class="box">
+
+                <input onkeyup="filChar()" id="search" type="text" placeholder="Search  ">
+                <div id="cards" class="gridCard "></div>
+
+            </div>
+        </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script>
+            function myClick() {
+                document.getElementById('first').innerHTML = "clicked"
+            }
+            let options = ""
+            document.addEventListener('DOMContentLoaded', function () {
+                var elems = document.querySelectorAll('.sidenav');
+                var instances = M.Sidenav.init(elems, options);
+            });
+            document.addEventListener('DOMContentLoaded', function () {
+                var elems = document.querySelectorAll('.collapsible');
+                var instances = M.Collapsible.init(elems, options);
+            });
+        </script>
+        <script src="index.js"></script>
 </body>
-<script>
-    function stp(snip) {
-        let regex = /Phone:?\s+|hours:?\s+|remarks:?"\s|"+/gi
-        return (snip.replace(regex, ''))
-    }
-
-    function filChar(char) {
-        cards = document.getElementById('cards')
-        sear = document.getElementById('search').value.toUpperCase()
-        places = allPlaces.filter(x => x[0].toUpperCase().match(sear))
-        str = places.map(f =>
-                `<div class="row">
-            <div class="col s12 m6">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                        <span class="card-title">${f[0]}</span>
-                        Address: ${f[1]} <br>
-                        Phone: ${stp(f[2])} <br>
-                        Hours: ${stp(f[3])} <br>
-                        Remarks: ${stp(f[4])} <br>
-                    </div>
-                </div>
-            </div>
-        </div>`
-
-            )
-
-            .join("")
-        // console.log(str)
-        cards.innerHTML = str
-
-    }
-
-    function filType(places, type) {
-        cards = document.getElementById('cards')
-        places = places.filter(q => q[8] === type)
-        console.log(places)
-        str = places.map(f =>
-                `<div class="row">
-            <div class="col s12 m6">
-                <div class="card blue-grey darken-1">
-                    <div class="card-content white-text">
-                        <span class="card-title">${f[0]}</span>
-                        Address: ${f[1]} <br>
-                        Phone: ${stp(f[2])} <br>
-                        Hours: ${stp(f[3])} <br>
-                        Remarks: ${stp(f[4])} <br>
-                    </div>
-                </div>
-            </div>
-        </div>`
-
-            )
-
-            .join("")
-        // console.log(str)
-        cards.innerHTML = str
-    }
-    // url = 'dum.txt'
-    url =
-        "https://gist.githubusercontent.com/wither7007/0ec337177af163db09ba18164c8be45c/raw/698360d35f853b5b29deef546a5a134ef71a03fc/hand"
-    let allPlaces = []
-    fetch(url)
-        .then((resp) => resp.json())
-        .then(function (data) {
-            console.log('data is', data)
-            allPlaces = allPlaces.concat(data)
-        })
-    document.getElementById('clothes').addEventListener('click', () => filType(allPlaces, 'c'))
-    document.getElementById('food').addEventListener('click', () => filType(allPlaces, 'f'))
-</script>
-<script>
-    let options = ""
-    document.addEventListener('DOMContentLoaded', function () {
-        var elems = document.querySelectorAll('.sidenav');
-        var instances = M.Sidenav.init(elems, options);
-    });
-    document.addEventListener('DOMContentLoaded', function () {
-        var elems = document.querySelectorAll('.sidenav');
-        var instances = M.Sidenav.init(elems, options);
-    });
-</script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 </html>
