--- a/hand/index.html
+++ b/hand/index.html
@@ -17,8 +17,8 @@
 
         <ul id="slide-out" class="sidenav mobile">
 
-            <li><a id="clothes" class="waves-effect" href="#!">Clothes</a></li>
-            <li><a id="food" class="waves-effect" href="#!">Food</a></li>
+            <li><a class="clothes" class="waves-effect" href="#!">Clothes</a></li>
+            <li><a class="food" class="waves-effect" href="#!">Food</a></li>
         </ul>
         <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -26,32 +26,9 @@
         <div class="wrapper">
             <ul class="collapsible">
                 <li>
-                    <div class="collapsible-header">
-                        <i class="material-icons">filter_drama</i>Essentials</div>
-                    <div class="collapsible-body">
-
-
-                        <ul class="collapsible">
-                            <li>
-                                <div class="collapsible-header"><i class="material-icons">filter_drama</i>Food</div>
-                                <div class="collapsible-body"><span id="clothes">Clothes</span></div>
-                                <div class="collapsible-body"><span id="food">Food</span></div>
-                            </li>
-                            <li>
-                                <div class="collapsible-header"><i class="material-icons" id="clothes">filter_drama</i>Clothes</div>
-                                <!-- <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-                            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div> -->
-                            </li>
-                            <li>
-                                <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-                                <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-                <li>
-                    <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-                    <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                    <div class="collapsible-header"><i class="material-icons">place</i>Essentails</div>
+                    <div class="collapsible-body"><span class="clothes">Clothes</span></div>
+                    <div class="collapsible-body"><span class="food">Food </span></div>
                 </li>
                 <li>
                     <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
