--- a/hand/index.html
+++ b/hand/index.html
@@ -12,27 +12,27 @@
 </head>
 
 <body>
+    <ul id="slide-out" class="sidenav">
+        <li>
+            <div class="divider"></div>
+        </li>
+        <li><a class="subheader">Essentials</a></li>
+        <li><a class="waves-effect clothes" href="#!">Clothes</a></li>
+        <li><a class="waves-effect fs" href="#!">Food Shelves</a></li>
+    </ul>
+    <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
-    <div class="smenu">
-
-        <ul id="slide-out" class="sidenav mobile">
-
-            <li><a class="clothes" class="waves-effect" href="#!">Clothes</a></li>
-            <li><a class="food" class="waves-effect" href="#!">Food</a></li>
-        </ul>
-        <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
     <div class="containers">
         <div class="wrapper">
             <ul class="collapsible">
                 <li>
-                    <div class="collapsible-header"><i class="material-icons">place</i>Essentails</div>
+                    <div class="collapsible-header"><i class="material-icons">expand_more</i>Essentails</div>
                     <div class="collapsible-body"><span class="clothes">Clothes</span></div>
-                    <div class="collapsible-body"><span class="food">Food </span></div>
+                    <div class="collapsible-body"><span class="fs">Food Shelves</span></div>
                 </li>
                 <li>
-                    <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-                    <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+                    <div class="collapsible-header"><i class="material-icons">expand_more</i>Public Assistance</div>
+                    <div class="collapsible-body"><span>Types</span></div>
                 </li>
             </ul>
             <div id='first' class="box">
