--- a/hand/index.html
+++ b/hand/index.html
@@ -13,54 +13,147 @@
     <title>TC Streets</title>
     <style>
         #cards .row {
-        width: 100%;
-        margin: 0;
-    }
+            width: 100%;
+            margin: 0;
+        }
     </style>
+
+    <!-- <script src="https://printjs-4de6.kxcdn.com/print.min.js"></script> -->
+    <script src="pr.js"></script>
 </head>
+<style>
+    .collapsible-body:hover {
+        color: #000;
+        background-color: #00ff00;
+    }
+
+    #top,
+    #top2 {
+        background-color: pink;
+        /* width: 600px; */
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: baseline;
+
+
+        .flex1 {
+            flex-grow: 1;
+        }
+
+        #logo2 {
+            flex-grow: 2;
+            color: blue;
+        }
+</style>
 
 <body>
-    <div id="slide"></div>
-    <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    <div id="logo">TCStreets.org</div>
-    <div class="containers">
+    <style>
+        .top>ul {
+            display: flex;
+            list-style: none;
+        }
+
+        .top>ul>li {
+            /* margin: 1rem; */
+            border: 1rem;
+            flex-grow: 1;
+            /* border: solid; */
+            padding: 1rem;
+        }
+
+        .top>li:nth-of-type(1) {
+            flex-grow: .4;
+        }
+
+        .top>li:nth-of-type(4) {
+            flex-grow: 10;
+        }
+
+        .top>li:nth-of-type(3) {
+            flex-grow: 7;
+        }
+    </style>
+
+
+    <style>
+        .example_a {
+            color: #000 !important;
+            text-transform: uppercase;
+            background: #c3c3c3;
+            padding: 10px;
+            border-radius: 5px;
+            display: inline-block;
+            border: none;
+        }
+
+        .example_a:hover {
+            /* background: #434343; */
+            letter-spacing: 1px;
+            -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+            -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+            box-shadow: 5px 40px -10px rgba(0, 0, 0, 0.57);
+            transition: all 0.4s ease 0s;
+        }
+    </style>
+    <span class="top">
+
+        <ul class="top">
+            <li>
+                <div id="slide"></div>
+                <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            </li>
+
+            <li>
+
+                <div id="logo"> TCStreets.org </div>
+            </li>
+            <li></li>
+            <li>
+
+            </li>
+        </ul>
+    </span>
+
+
+    <div class=" containers">
         <div class="wrapper">
-            <ul class="collapsible">
-                <li>
-                    <div class="collapsible-header"><i class="material-icons">expand_more</i>Essentials</div>
-                    <div class="collapsible-body"><span class="cc">Clothes</span></div>
-                    <div class="collapsible-body"><span class="fs">Food Shelves</span></div>
-                    <div class="collapsible-body"><span class="me">Meals</span></div>
-                    <div class="collapsible-body"><span class="sh">Shelter</span></div>
-                </li>
-                <li>
-                    <div class="collapsible-header"><i class="material-icons">expand_more</i>Public Assistance</div>
-                    <div class="collapsible-body"><span>Types</span></div>
-                </li>
-            </ul>
             <div id='first' class="box">
+                <div id="collapse"></div>
+            </div>
+            <div id="second" class="box">
+                <style>
+                    .ok {
+                        display: inline;
+                        float: right;
+                    }
+                </style>
+                <div class="ok">
+                    <div id='print' class="button_cont" align="center"><a class="example_a" href="#">Print</a></div>
 
-                <input onkeyup="filChar()" id="search" type="text" placeholder="Search  ">
+                </div>
+                <input onkeyup="filChar()" id="search" type="text" placeholder="Search">
                 <div id="cards" class="gridCard "></div>
-
             </div>
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script>
-            function myClick() {
-                document.getElementById('first').innerHTML = "clicked"
-            }
-            let options = ""
-            document.addEventListener('DOMContentLoaded', function () {
-                var elems = document.querySelectorAll('.sidenav');
-                var instances = M.Sidenav.init(elems, options);
-            });
-            document.addEventListener('DOMContentLoaded', function () {
-                var elems = document.querySelectorAll('.collapsible');
-                var instances = M.Collapsible.init(elems, options);
-            });
-        </script>
-        <script src="index.js"></script>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js">
+    </script>
+    <script>
+        function myClick() {
+            document.getElementById('first').innerHTML = "clicked"
+        }
+        let options = ""
+        document.addEventListener('DOMContentLoaded', function () {
+            var elems = document.querySelectorAll('.sidenav');
+            var instances = M.Sidenav.init(elems, options);
+        });
+        document.addEventListener('DOMContentLoaded', function () {
+            var elems = document.querySelectorAll('.collapsible');
+            var instances = M.Collapsible.init(elems, options);
+        });
+    </script>
+    <script src="index.js"></script>
 </body>
 
 </html>
