--- a/hand/index.html
+++ b/hand/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="./materialize.css">
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="manifest" href="/manifest.json"> -->
     <link rel="icon" href="/images/icons-512.png">
@@ -43,13 +43,13 @@
             <div id='first' class="box">
                 <span id="below">
 
-                    <img src="/images/arrow.png" alt=""> Click Below to Start</span>
+                    <img src="./images/arrow.png" alt=""> Click Below to Start</span>
                 </span>
                 <div id="collapse"></div>
             </div>
             <div id="second" class="box">
                 <div class="ok">
-                    <div id='print' class="button_cont" align="center"><a class="example_a" href="#">Print</a>
+                    <div id='print' class="button_cont" align="center"><a class="myButton" href="#">Print</a>
                     </div>
 
                 </div>
