--- a/hand/index.html
+++ b/hand/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js">
+    <script src="./materialize.min.js">
     </script>
     <script>
         function myClick() {
