--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="textComp/index.html">Text Comp</a>
       <a href="hand/index.html">Hand</a>
       <a href="https://docs.google.com/spreadsheets/d/14FR6rwA5RX1jc43uMtVqkyvVAbvdx2cbYm1nqkKicIQ/edit#gid=867705343">Handbook Data</a>
+      <a href="./handb.docx">Word</a>
     </li>
   </ul>
 </header>
