--- a/hand/index.html
+++ b/hand/index.html
@@ -52,6 +52,7 @@
     </script>
     <script src="./js/index.js"></script>
     <script src="./js/weather.js"></script>
+    <script src="//instant.page/1.2.2" type="module" integrity="sha384-2xV8M5griQmzyiY3CDqh1dn4z3llDVqZDqzjzcY+jCBCk/a5fXJmuZ/40JJAPeoU"></script>
 </body>
 
 </html>
